--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Weavercast
-description: "A podcast about graphic novels."
+title: History Of Esfiomi
+description: "A podcast about the history of Esfiomi."
 author:
   name: "SRWeaver"
   email: "lwflouisa@gmail.com"
-  url: "lwflouisa.github.io/Weavercast"
+  url: "lwflouisa.github.io/HistoryOfEsfiomiPodcast"
 
 baseurl: /
 
