--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: History Of Esfiomi
 description: "A podcast about the history of Esfiomi."
 author:
-  name: "HistoryOfEsfiomi"
+  name: "SRWeaver"
   email: "lwflouisa@gmail.com"
   url: "lwflouisa.github.io/HistoryOfEsfiomiPodcast"
 
